Bug 606998 "Helper Applications" panel in preferences window unusable on a "non Gnome" system. r=Neil